2_STAGE/helen-stage-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helen-stage-ingress
  namespace: staging
spec:
  rules:
  - host: cybermonkey.dev
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helen-stage-service
                port:
                  number: 80
